--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -1,38 +1,43 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Post{% endblock %}
+{% block title %}Post
+{% endblock %}
 
 {% block body %}
-    <h1>Post</h1>
+	<h1>Post</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ post.id }}</td>
-            </tr>
-            <tr>
-                <th>Title</th>
-                <td>{{ post.title }}</td>
-            </tr>
-            <tr>
-                <th>Content</th>
-                <td>{{ post.content }}</td>
-            </tr>
-            <tr>
-                <th>PublishedAt</th>
-                <td>{{ post.publishedAt ? post.publishedAt|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-            <tr>
-                <th>Picture</th>
-                <td>{{ post.picture }}</td>
-            </tr>
-        </tbody>
-    </table>
+	<table class="table">
+		<tbody>
+			<tr>
+				<th>Id</th>
+				<td>{{ post.id }}</td>
+			</tr>
+			<tr>
+				<th>Title</th>
+				<td>{{ post.title }}</td>
+			</tr>
+			<tr>
+				<th>Content</th>
+				<td>{{ post.content }}</td>
+			</tr>
+			<tr>
+				<th>PublishedAt</th>
+				<td>{{ post.publishedAt ? post.publishedAt|date('Y-m-d H:i:s') : '' }}</td>
+			</tr>
+			<tr>
+				<th>Picture</th>
+				<td>{{ post.picture }}</td>
+			</tr>
+			<tr>
+				<th>Category</th>
+				<td>{{ post.category ? post.category.name : '' }}</td>
+			</tr>
+		</tbody>
+	</table>
 
-    <a href="{{ path('app_post_index') }}">back to list</a>
+	<a href="{{ path('app_post_index') }}">back to list</a>
 
-    <a href="{{ path('app_post_edit', {'id': post.id}) }}">edit</a>
+	<a href="{{ path('app_post_edit', {'id': post.id}) }}">edit</a>
 
-    {{ include('post/_delete_form.html.twig') }}
+	{{ include('post/_delete_form.html.twig') }}
 {% endblock %}
