--- a/templates/public_post/index.html.twig
+++ b/templates/public_post/index.html.twig
@@ -40,6 +40,9 @@
 			color: #999;
 			font-size: 0.9rem;
 			margin-bottom: 1rem;
+			display: flex;
+			flex-wrap: wrap;
+			gap: 1rem;
 		}
 		article p {
 			color: #666;
@@ -66,12 +69,16 @@
 		{% for post in posts %}
 			<article>
 				<h2>{{ post.title }}</h2>
-				{% if post.publishedAt %}
-					<div class="post-meta">
-						📅 Publié le
-						{{ post.publishedAt|date('d/m/Y') }}
-					</div>
-				{% endif %}
+				<div class="post-meta">
+					{% if post.publishedAt %}
+						<span>📅 Publié le
+							{{ post.publishedAt|date('d/m/Y') }}</span>
+					{% endif %}
+					{% if post.category %}
+						<span>🏷️
+							{{ post.category.name }}</span>
+					{% endif %}
+				</div>
 				<p>{{ post.content|slice(0, 200) }}
 					{% if post.content|length > 200 %}...
 					{% endif %}
